--- a/src/app/features/auth/signup/signup.component.scss
+++ b/src/app/features/auth/signup/signup.component.scss
@@ -503,7 +503,7 @@ body {
     text-align: right;
     letter-spacing: -1.2px;
     line-height: 60px;
-    width: 386.03px;
+    // width: 386.03px;
 }
 
 // Features List
@@ -594,6 +594,7 @@ body {
     line-height: 26px;
     width: 427.48px;
     margin: 0;
+    direction: rtl;
 }
 
 .testimonial-author {
