--- a/src/app/features/auth/trip-details/trip-details.component.html
+++ b/src/app/features/auth/trip-details/trip-details.component.html
@@ -194,7 +194,7 @@
                                         min="1"
                                         max="8"
                                         formControlName="numberOfSeats"
-                                        readonly
+                                        
                                         dir="rtl">
                                     <div class="input-icon">
                                         <img src="assets/icons/seats.svg" alt="مقاعد">
@@ -217,79 +217,79 @@
             </div>
         </div>
 
-        <!-- Right side - Background -->
-        <div class="background-section">
-            <div class="background-overlay"></div>
-            <div class="background-content">
-                <div class="content-top">
-                    <!-- Logo -->
-                    <div class="logo-container animated fadeInLeft">
-                        <img src="http://localhost:3845/assets/38f2cf02340374263708ce72de3150081587981d.png"
-                            alt="موري" class="logo">
+        
+            <!-- Right side - Background -->
+            <div class="background-section">
+                <div class="background-overlay"></div>
+                <div class="background-content">
+                    <div class="content-top">
+                        <!-- Logo -->
+                        <div class="logo-container animated fadeInLeft">
+                            <img src="http://localhost:3845/assets/38f2cf02340374263708ce72de3150081587981d.png"
+                                alt="موري" class="logo">
+                        </div>
+
+                        <!-- Main Heading -->
+                        <h2 class="bg-title animated fadeInRight">.رحلتك تبدأ بخطوة آمنة</h2>
+
+                        <!-- Features List -->
+                        <div class="features-list animated fadeInLeft">
+                            <div class="feature-item">
+                                <div class="feature-icon">
+                                    <img src="http://localhost:3845/assets/7725173c3761a14cb510b4bcccc8cc5db859c8a0.svg"
+                                        alt="Security">
+                                </div>
+                                <div class="feature-content">
+                                    <h3 class="feature-title">أمان تثق به</h3>
+                                    <p class="feature-desc">.سائقون معتمدون وخاصية "طمئن من تحب" لراحة بالك وبالهم</p>
+                                </div>
+                            </div>
+
+                            <div class="feature-item">
+                                <div class="feature-icon">
+                                    <img src="http://localhost:3845/assets/7f7916507f89e4fe4b639712760413cceeacbb19.svg"
+                                        alt="Schedule">
+                                </div>
+                                <div class="feature-content">
+                                    <h3 class="feature-title"> جدول يناسب احتياجك</h3>
+                                    <p class="feature-desc">.رحلات مجدولة تلقائيًا لتناسب مواعيك بدقة</p>
+                                </div>
+                            </div>
+
+                            <div class="feature-item">
+                                <div class="feature-icon">
+                                    <img src="http://localhost:3845/assets/86dbe830c8962320f308806d6b46d52cbd72ed37.svg"
+                                        alt="Comfort">
+                                </div>
+                                <div class="feature-content">
+                                    <h3 class="feature-title">توفير وراحة</h3>
+                                    <p class="feature-desc">.مقعدك محجوز في مركبة مريحة وباشتراك يوفر عليك الكثير</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
-                    <!-- Main Heading -->
-                    <h2 class="bg-title animated fadeInRight">رحلتك تبدأ بخطوة آمنة.</h2>
-
-                    <!-- Features List -->
-                    <div class="features-list animated fadeInLeft">
-                        <div class="feature-item">
-                            <div class="feature-icon">
-                                <img src="http://localhost:3845/assets/7725173c3761a14cb510b4bcccc8cc5db859c8a0.svg"
-                                    alt="Security">
+                    <!-- Testimonial -->
+                    <div class="testimonial animated fadeInRight">
+                        <div class="testimonial-content">
+                            <div class="quote-icon">
+                                <img src="http://localhost:3845/assets/45a659cfd16093095efd2abe045aabceb1bf36c3.svg"
+                                    alt="Quote">
                             </div>
-                            <div class="feature-content">
-                                <h3 class="feature-title">أمان تثق به</h3>
-                                <p class="feature-desc">سائقون معتمدون وخاصية "طمئن من تحب" لراحة بالك وبالهم.</p>
+                            <span class="quote-text">"
+                                أفضل قرار اتخذته هذا الفصل الدراسي. تطبيق موري وفر عليّ وقت وجهد كبير، والأهم من كذا، أهلي صاروا متطمنين عليّ طول الوقت
+                            "</span>
+                            <div class="testimonial-author">
+                                <div class="author-info">
+                                    <div class="author-name">نورة العبدالله</div>
+                                    <div class="author-title">طالبة في جامعة الملك سعود</div>
+                                </div>
+                                <img src="http://localhost:3845/assets/1dad3632c4b8c168659211338e8f060d5a802a35.png"
+                                    alt="نورة العبدالله" class="author-avatar">
                             </div>
-                        </div>
-
-                        <div class="feature-item">
-                            <div class="feature-icon">
-                                <img src="http://localhost:3845/assets/7f7916507f89e4fe4b639712760413cceeacbb19.svg"
-                                    alt="Schedule">
-                            </div>
-                            <div class="feature-content">
-                                <h3 class="feature-title">جدول على مقاسك</h3>
-                                <p class="feature-desc">رحلات مجدولة تلقائيًا لتناسب مواعيد محاضراتك بدقة.</p>
-                            </div>
-                        </div>
-
-                        <div class="feature-item">
-                            <div class="feature-icon">
-                                <img src="http://localhost:3845/assets/86dbe830c8962320f308806d6b46d52cbd72ed37.svg"
-                                    alt="Comfort">
-                            </div>
-                            <div class="feature-content">
-                                <h3 class="feature-title">توفير وراحة</h3>
-                                <p class="feature-desc">مقعدك محجوز في مركبة مريحة وباشتراك يوفر عليك الكثير.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Testimonial -->
-                <div class="testimonial animated fadeInRight">
-                    <div class="testimonial-content">
-                        <div class="quote-icon">
-                            <img src="http://localhost:3845/assets/45a659cfd16093095efd2abe045aabceb1bf36c3.svg"
-                                alt="Quote">
-                        </div>
-                        <span class="quote-text">
-                            "أفضل قرار اتخذته هذا الفصل الدراسي. تطبيق موري وفر عليّ وقت وجهد كبير، والأهم من كذا،
-                            أهلي صاروا متطمنين عليّ طول الوقت."
-                        </span>
-                        <div class="testimonial-author">
-                            <div class="author-info">
-                                <div class="author-name">نورة العبدالله</div>
-                                <div class="author-title">طالبة في جامعة الملك سعود</div>
-                            </div>
-                            <img src="http://localhost:3845/assets/1dad3632c4b8c168659211338e8f060d5a802a35.png"
-                                alt="نورة العبدالله" class="author-avatar">
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
