--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -46,7 +46,7 @@
                                     <a href="index.html#service">حول موري</a>
                                 </li>
                                 <li class="menu-item-has-children active">
-                                    <a href="index.html#features">الميزات</a>
+                                    <a href="index.html#features">المميزات</a>
                                 </li>
                                 <li class="menu-item-has-children active">
                                     <a href="index.html#questions">الأسئلة الشائعة</a>
@@ -110,7 +110,7 @@
                                 <a class="top" href="index.html#service">حول موري</a>
                             </li>
                             <li> 
-                                <a class="top" href="index.html#features">الميزات  </a>
+                                <a class="top" href="index.html#features">المميزات  </a>
                             </li>
                             <li>
                                 <a class="top" href="index.html#questions" >الاسئلة الشائعة</a>
@@ -151,9 +151,9 @@
                             رحلات مرنة بمواعيد دقيقة من البيت إلى الجامعة
                             </h1>
                         <p>
-                            موري للنقل التعليمي مختص بنقل الطالبات ومنسوبي الجامعات في رحلات منظمة حسب الجدول
+                            موري للنقل التعليمي مختص بنقل الموظفين والطلاب  في رحلات منظمة حسب الجدول
                              وساعات الدوام بأمان عالٍ وتكلفة مناسبة.
-                              يخدم موري طالبات وموظفات ومنسوبي الجامعة والمعاهد والمراكز التدريبية والسائقين على حد سواء،
+                              يخدم موري منسوبي الجامعات والمعاهد والمراكز التدريبية والسائقين على حد سواء،
                               ويوفر لهم تطبيق إلكتروني سهل الاستخدام ومزود بخيارات مرنة تتناسب مع احتياجات المستخدم.
                         </p>
                         <ul>
@@ -193,9 +193,9 @@
                     <div class="appie-section-title text-center justify-content-center">
                         <h3 class="appie-title">كيف يعمل <span class="yellow-color">موري؟</span> </h3>
                         <p col-lg-4>
-                            يجدول موري رحلاتك التعليمية حسب جدول محاضراتك تلقائيا ويتيح لك اختيار سيارة
+                            يجدول موري رحلاتك حسب جدولك  تلقائيا ويتيح لك اختيار سيارة
                             أو حافلة حسب رغبتك في الساعات التي تتوافق مع
-                            أوقات حضورك وانصرافك، ويتم إشعارك حال اقتراب السائق وعند وصوله إلى موقعك المحدد.
+                            أوقات حضورك وانصرافك، ويتم إشعارك في حال اقتراب السائق وعند وصوله إلى موقعك المحدد.
                         </p>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                                 <div class="text-center ">
                                     <img class="" alt="" src="../../../assets/image/download.svg" />
                                     <h4 class="pt-16 ">حمِّل</h4>
-                                    <p class="pt-16 "> حمِّلي التطبيق من المتجر الخاص بهاتفك.</p>
+                                    <p class="pt-16 "> حمِّل التطبيق من المتجر الخاص بهاتفك.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6 padding-top-mobile">
@@ -217,7 +217,7 @@
                                     <img class="" alt="" src="../../../assets/image/Login.svg" />
                                     <h4 class="pt-16"> سجِّل </h4>
                                     <p class="pt-16 "> 
-                                        أنشئي حسابك الخاص وسجلي الدخول.
+                                        أنشئ حسابك الخاص وسجل الدخول.
                                     </p>
                                 </div>    
                             </div>
@@ -225,7 +225,7 @@
                                 <div class="text-center">
                                     <img class="" alt="" src="../../../assets/image/savetrips.svg" />
                                     <h4 class="pt-16"> اضبط</h4>
-                                    <p class="pt-16 "> أدخلي مواعيد دوامك حسب جدولك الدراسي. </p>
+                                    <p class="pt-16 "> أدخل مواعيد دوامك حسب جدولك الدراسي. </p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6 padding-top-mobile">
@@ -233,7 +233,7 @@
                                     <img class="" alt="" src="../../../assets/image/notification.svg" />
                                     <h4 class="pt-16"> اربط</h4>
                                     <p class="pt-16 "> 
-                                        فعلي خاصية إرسال التحديثات وطمئني من تحبين.
+                                        فعل خاصية إرسال التحديثات وطمئن من تحب.
                                      </p>
                                 </div>
                             </div>
@@ -340,7 +340,7 @@
                     <div class="appie-section-title text-center">
                         <h3 class="appie-title">الأسئلة الشائعة</h3>
                         <p class="">
-                            الأمان والراحة أولويتنا وسعيا منا إلى لأفضل نستقبل جميع الاستفسارات كما نرحب بما تقدمونه من مقترحات
+                            الأمان والراحة أولويتنا وسعياً منا إلى الأفضل نستقبل جميع الاستفسارات كما نرحب بما تقدمونه من مقترحات
                         </p>
                     </div>                    
                 </div>
@@ -448,8 +448,8 @@
                         <div class="input-box mt-30 row p-0">
                             <div class="col-lg-6">
                                 <div class="appie-project-content text-right">
-                                    <h3 class="title pt-56">سجلي الآن </h3>
-                                    <p>لا تشيلي هم المواصلات، خلي تركيزك على دراستك وتركيزنا على أمانك وراحتك ووقتك.</p>
+                                    <h3 class="title pt-56">سجل الآن </h3>
+                                    <p>لا تشيل هم المواصلات.</p>
                                     <div class="input-box  mt-30 row p-0  ">
                                         <button class="buttonx"><a href="https://apps.apple.com/us/app/muri-%D9%85%D9%88%D8%B1%D9%8A-%D9%84%D9%84%D9%86%D9%82%D9%84-%D8%A7%D9%84%D8%AC%D9%85%D8%A7%D8%B9%D9%8A/id1672855064"><img src="../../../assets/image/App%20store%20icon.png" alt=""></a></button>
                                         <button class="buttonx "><a href="https://play.google.com/store/apps/details?id=com.muri.customer"><img src="../../../assets/image/Play%20store%20store%20icon.png" alt=""></a></button>
@@ -477,7 +477,7 @@
                     <div class="footer-widget-info text-right">
                         <h4 class="title">تواصل معنا</h4>
                         <ul>
-                            <li><a href="mailto: info&#64;rapidshift.sa"><img src="../../../assets/image/email.svg" alt="" > info&#64;rapidshift.sa</a></li>
+                            <li><a href="mailto: info&#64;rapidshift.sa"><img src="../../../assets/image/email.svg" alt="" > info&#64;asasit.com</a></li>
                             <li><a href="https://api.whatsapp.com/send/?phone=%2B966534363917&text&type=phone_number&app_absent=0"><img src="../../../assets/image/whatsapp.svg" alt=""> +966534363917</a></li>
                         </ul>
                     </div>
