--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -40,16 +40,16 @@
                         <div id="menu" class="text-right">
                             <ul class="offcanvas_main_menu">
                                 <li class="menu-item-has-children active top">
-                                    <a class="" href="index.html"> الرئيسية</a>
+                                    <a class="" href="/"> الرئيسية</a>
                                 </li>
                                 <li class="menu-item-has-children active">
-                                    <a href="index.html#service">حول موري</a>
+                                    <a href="#service">حول موري</a>
                                 </li>
                                 <li class="menu-item-has-children active">
-                                    <a href="index.html#features">الميزات</a>
+                                    <a href="#features">الميزات</a>
                                 </li>
                                 <li class="menu-item-has-children active">
-                                    <a href="index.html#questions">الأسئلة الشائعة</a>
+                                    <a href="#questions">الأسئلة الشائعة</a>
                                 </li>
                                 <li class="menu-item-has-children active">
                                     <a href="muriapp.html">من نحن؟</a>
@@ -95,7 +95,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-2 col-md-4 col-sm-5 col-6 order-1 order-sm-1">
                     <div class="appie-logo-box text-right">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="../../../assets/image/logo.png" alt="" class="logo">
                         </a>
                     </div>
@@ -104,16 +104,16 @@
                     <div class="appie-header-main-menu">
                         <ul>
                             <li>
-                                <a class="top" href="index.html"> الرئيسية</a>
+                                <a class="top" href="/"> الرئيسية</a>
                             </li>
                             <li>
-                                <a class="top" href="index.html#service">حول موري</a>
+                                <a class="top" href="#service">حول موري</a>
                             </li>
                             <li> 
-                                <a class="top" href="index.html#features">الميزات  </a>
+                                <a class="top" href="#features">الميزات  </a>
                             </li>
                             <li>
-                                <a class="top" href="index.html#questions" >الاسئلة الشائعة</a>
+                                <a class="top" href="#questions" >الاسئلة الشائعة</a>
                             </li>
                             <li>
                                 <a class="top" href="muriapp.html" >من نحن؟</a>
@@ -486,7 +486,7 @@
                     <div class="footer-navigation text-right">
                         <h4 class="title">روابط سريعة</h4>
                         <ul>
-                            <li><a href="index.html">الرئيسية</a></li>
+                            <li><a href="/">الرئيسية</a></li>
                             <li><a href="terms.html">الشروط والأحكام</a></li>
                             <li><a href="privacy.html"> سياسة الإستخدام</a></li>
                             <li><a href="muriapp.html"> تطبيق موري </a></li>
@@ -498,7 +498,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-about-widget text-right">
                         <div class="logo">
-                            <a href="index.html"><img src="../../../assets/image/logo.png" alt="" class="logo"></a>
+                            <a href="/"><img src="../../../assets/image/logo.png" alt="" class="logo"></a>
                         </div>
                         <p>رحلات مرنة بمواعيد دقيقة من البيت إلى الجامعة</p>
                         <div class="social mt-30">
@@ -546,7 +546,7 @@
 
     <!--====== APPIE BACK TO TOP PART ENDS ======-->
     <div class="back-to-top align-items-center" style="display: none;">
-        <a href="index.html" class=""><i class="muri-arrow-up pt-12"></i></a>
+        <a href="/" class=""><i class="muri-arrow-up pt-12"></i></a>
     </div>
 
 
