Refactor code structure for improved readability and maintainability

--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -327,7 +327,7 @@
                     <div class="content-top">
                         <!-- Logo -->
                         <div class="logo-container animated fadeInLeft">
-                            <img src="http://localhost:3845/assets/38f2cf02340374263708ce72de3150081587981d.png"
+                            <img src="assets/icons/muri-white.png"
                                 alt="موري" class="logo">
                         </div>
 
@@ -338,7 +338,7 @@
                         <div class="features-list animated fadeInLeft">
                             <div class="feature-item">
                                 <div class="feature-icon">
-                                    <img src="http://localhost:3845/assets/7725173c3761a14cb510b4bcccc8cc5db859c8a0.svg"
+                                    <img src="assets/icons/shiled-green.svg"
                                         alt="Security">
                                 </div>
                                 <div class="feature-content">
@@ -349,7 +349,7 @@
 
                             <div class="feature-item">
                                 <div class="feature-icon">
-                                    <img src="http://localhost:3845/assets/7f7916507f89e4fe4b639712760413cceeacbb19.svg"
+                                    <img src="assets/icons/calenda-green.svg"
                                         alt="Schedule">
                                 </div>
                                 <div class="feature-content">
@@ -360,7 +360,7 @@
 
                             <div class="feature-item">
                                 <div class="feature-icon">
-                                    <img src="http://localhost:3845/assets/86dbe830c8962320f308806d6b46d52cbd72ed37.svg"
+                                    <img src="assets/icons/wallet-green.svg"
                                         alt="Comfort">
                                 </div>
                                 <div class="feature-content">
@@ -375,7 +375,7 @@
                     <div class="testimonial animated fadeInRight">
                         <div class="testimonial-content">
                             <div class="quote-icon">
-                                <img src="http://localhost:3845/assets/45a659cfd16093095efd2abe045aabceb1bf36c3.svg"
+                                <img src="assets/icons/deouble-quote-green.svg"
                                     alt="Quote">
                             </div>
                             <span class="quote-text">"
@@ -386,7 +386,7 @@
                                     <div class="author-name">نورة العبدالله</div>
                                     <div class="author-title">طالبة في جامعة الملك سعود</div>
                                 </div>
-                                <img src="http://localhost:3845/assets/1dad3632c4b8c168659211338e8f060d5a802a35.png"
+                                <img src="assets/image/quoter-( demo).png"
                                     alt="نورة العبدالله" class="author-avatar">
                             </div>
                         </div>
