--- a/src/app/features/auth/signup/signup.component.scss
+++ b/src/app/features/auth/signup/signup.component.scss
@@ -454,7 +454,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('http://localhost:3845/assets/8ec9d75bed1be49a8fe286ebb65be9d0e2379bd7.png');
+    background-image: url('../../../../assets/image/background-auth.png');
     background-size: 264.69% 100%;
     background-position: top left;
     background-repeat: no-repeat;
