--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -88,8 +88,8 @@
 
 
   <!--====== Header ======-->
-    
-  <header class="appie-header-area appie-header-area-rtl appie-sticky">
+    <app-navbar></app-navbar>
+  <!-- <header class="appie-header-area appie-header-area-rtl appie-sticky ">
     <div class="container">
         <div class="header-nav-box">
             <div class="row align-items-center">
@@ -116,7 +116,7 @@
                                 <a class="top" href="#questions" >الاسئلة الشائعة</a>
                             </li>
                             <li>
-                                <a class="top" href="muriapp.html" >من نحن؟</a>
+                                <a class="top" href="aboutUs" >من نحن؟</a>
                             </li>
                         </ul>
                     </div>
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-</header>
+</header> -->
 
 <!--====== Header ENDS ======-->
     
